# ScreenShot2Code

./: .gitignore  LICENSE  README.md
Data/: Dockerfile  PLAN.md  README.md  dataset_notes.md  list_data.md  required_data.md  webcode2m.ipynb  websight.ipynb  websight_to_contract.ipynb  websight_to_contract.md  websight_to_contract_parallel.py  webui.ipynb
Data/analysis/: dataset_notes.md  required_data.md  token_len.py  webcode2m.ipynb  websight.ipynb  webui.ipynb
Data/drafting/: Dockerfile  README.md  convert.ipynb  convert_lib.py  convert_parallel.py  view_arrow.py
Data/papers/: README.md
Data/pretrain/: README.md  pretrain_stream.ipynb
Data/visual/: compare_datasets.py
Evaluation/: Experiments.ipynb  README.md
SFT/: .dockerignore  .gitignore  DATA_FORMAT_CONTRACT.md  Dockerfile  README.md  pyproject.toml
SFT/configs/: ds_z2_config.json  full_ft_qwen3_5_9b.yaml  full_ft_qwen3_vl_8b_instruct.yaml  lora_ft_qwen3_5_9b.yaml  lora_ft_qwen3_vl_8b_instruct.yaml
SFT/data/: loader.py  token_len.py
SFT/scripts/: overfit20.py  smoke_test.py
SFT/train/: formatting.py  train_sft.py
