[project]
name = "sft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.14.0",
    "datasets==4.4.1",
    "deepspeed>=0.19.2",
    "numpy>=2.5.1",
    "peft>=0.18.0",
    "qwen-vl-utils>=0.0.14",
    "torch==2.5.1",
    "transformers==4.57.3",
    "trl==0.22.0",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu121", marker = "sys_platform == 'linux'" }]

[dependency-groups]
dev = [
    "ruff>=0.15.21",
]

[project.optional-dependencies]
gpu = ["flash-attn>=2.0.0"]
