[project]
name = "sft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.14.0",
    "datasets>=4.7,<5", 
    "deepspeed>=0.19.2",
    "numpy>=2.5.1",
    "peft>=0.18.1",       
    "qwen-vl-utils>=0.0.14",
    "torch>=2.6,<2.7",     
    "torchvision>=0.21,<0.22",
    "transformers>=5.13,<6",
    "trl>=1.8,<2",       
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu124", marker = "sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-cu124", marker = "sys_platform == 'linux'" }]

[dependency-groups]
dev = [
    "ruff>=0.15.21",
]

[project.optional-dependencies]
gpu = [
    "flash-attn>=2.0.0",
    "causal-conv1d>=1.4",
    "flash-linear-attention>=0.2",
]
